Fixed routing issue: Switch no longer exists and replaced with Routes and the components in the route path are now wrapped in {} - curly braces for the alias of the element attribute

--- a/src/components/Auth/auth.css
+++ b/src/components/Auth/auth.css
@@ -11,7 +11,7 @@
     color: orchid;
 }
 
-#login, #register {
+/* #login, #register {
     background-color: palegreen;
     border: 2px solid navy;
     border-radius: 15px;
@@ -30,4 +30,4 @@
     border: 2px solid orchid;
     background-color: transparent;
     
-}
+} */
